@@ -1,0 +1,6 @@
+; This is a comment 1.
+	; This is comment 2.
+* This is comment 3.
+
+	END
+
